// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot SafeAreaView 1`] = `
<RNCSafeAreaView
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
    ]
  }
/>
`;

exports[`snapshot View 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
    ]
  }
/>
`;
